fix: improve error messages for missing Google OAuth credentials and clean up console logs

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,8 +20,8 @@
   }
 
   /* Force display of spin buttons on number inputs for mobile consistency */
-  input[type=number]::-webkit-inner-spin-button, 
-  input[type=number]::-webkit-outer-spin-button { 
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
     opacity: 1;
   }
 }
